# tuimerge

./: .gitignore  dlmerge.py  pyproject.toml  setup.py  tuimerge.py
sample/: expected.merge  main.1.c  main.2.c  main.c  multilang  multilang.1  multilang.2
tuimerge/: __init__.py  __main__.py  _curses_extra.pyi  build_curses_extra.py  curses_extra.c  curses_extra.h  curses_extra.py  util.py
