[project]
name = "tuimerge"
authors = [{name = "Dennis Lambe Jr.", email = "malsyned@malsyned.net"}]
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "merge3"
]
license = "GPL-2.0-only"

[tool.setuptools.packages.find]
include = [ "tuimerge" ]

[project.scripts]
tuimerge = "tuimerge.__main__:main"
